--- a/views/skillz/index.ejs
+++ b/views/skillz/index.ejs
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css"
     <title>Express-Dev-Skills</title>
 </head>
 <body>
-    <h1>Skillz</h1>
+    <h1>Skillz as of <%= time %></h1>
     <ul>
       <% skillz.forEach(skill => { %>
         <li>
+          <form 
+          action="/skillz/<%= skill._id %>?_method=DELETE"
+          class="delete-form"
+          method="POST"
+          >
+          <button type="submit">X</button>
+        </form>
           <a href="/skillz/<%= skill._id %>"><%= skill.text %></a>
                   - 
                   <%= skill.done ? 'done' : 'not done' %>
